--- a/wiki/fr/TechDraw_ProjectShape.html
+++ b/wiki/fr/TechDraw_ProjectShape.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ProjectShape/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ProjectShape&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw FormProjizieren (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ProjectShape.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ProjectShape (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw&#720; Proietta forma (62% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rzutowanie kszta&#322;t&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ProjectShape.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw ProjectShape
@@ -58,19 +58,15 @@
 </p><p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>. Les objets seront projet&eacute;s sur un plan parall&egrave;le &agrave; l'&eacute;cran, c'est-&agrave;-dire dans la direction de la cam&eacute;ra de la vue 3D, qui est utilis&eacute;e comme propri&eacute;t&eacute; par d&eacute;faut <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Direction</b>.</li>
+<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>. Les objets seront projet&eacute;s sur un plan parall&egrave;le &agrave; l'&eacute;cran, c'est-&agrave;-dire dans la direction de la cam&eacute;ra de la vue 3D, qui est utilis&eacute;e comme propri&eacute;t&eacute; par d&eacute;faut <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Direction</b>.</li>
 <li>S&eacute;lectionnez un ou plusieurs objets. Une projection distincte sera cr&eacute;&eacute;e pour chaque objet.</li>
-<li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Projeter une forme</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Projeter une forme</b> du menu.</li></ul></li>
-<li>Le panneau de t&acirc;ches <b>Projeter les formes</b> s'ouvre. Voir <a href="#Propri.C3.A9t.C3.A9s">Propri&eacute;t&eacute;s</a>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectShape.svg&amp;filetimestamp=20241127175341&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectShape.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Projeter une forme</b> du menu.</li>
+<li>Le panneau de t&acirc;ches <b>Projeter les formes</b> s'ouvre. Voir <a href="#Propri%C3%A9t%C3%A9s">Propri&eacute;t&eacute;s</a>.</li>
 <li>D&eacute;finissez les options souhait&eacute;es.</li>
 <li>Les options s&eacute;lectionn&eacute;es ne doivent pas donner lieu &agrave; une projection vide, car cela entra&icirc;nerait une erreur. Par exemple, pour un objet ne comportant que des ar&ecirc;tes vives, comme un <a href="../fr/Part_Box.html" title="Part Box/fr">Part Cube</a>, l'option <b>Ar&ecirc;tes vives visibles</b> et/ou <b>Ar&ecirc;tes vives masqu&eacute;es</b> doit &ecirc;tre coch&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>La projection est plac&eacute;e sur le plan XY.</li>
 <li>Vous pouvez modifier la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Placement</b> et/ou la propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Direction</b> de la projection.</li></ol>
-</div>
 <p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
@@ -139,35 +135,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125132041
+Cached time: 20260125132414
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.116 seconds
-Real time usage: 0.179 seconds
-Preprocessor visited node count: 981/1000000
-Post&#8208;expand include size: 31142/2097152 bytes
-Template argument size: 10617/2097152 bytes
+CPU time usage: 0.103 seconds
+Real time usage: 0.161 seconds
+Preprocessor visited node count: 973/1000000
+Post&#8208;expand include size: 30735/2097152 bytes
+Template argument size: 10539/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1464/5000000 bytes
+Unstrip post&#8208;expand size: 1468/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   57.894      1 -total
- 28.71%   16.620     15 Template:PropertyData
- 21.41%   12.395     15 Template:Variable
- 17.98%   10.407      1 Template:TechDraw_Tools_navi/fr
- 14.61%    8.457      2 Template:Navigation_menu_2
-  9.86%    5.709      1 Template:Userdocnavi/fr
-  9.21%    5.333      1 Template:TitleProperty
-  9.15%    5.299      1 Template:GuiCommand/fr
-  6.61%    3.826     10 Template:TRUE
-  6.06%    3.508      2 Template:Docnav/fr
+100.00%   56.485      1 -total
+ 32.18%   18.177     15 Template:PropertyData
+ 25.77%   14.558     15 Template:Variable
+ 12.80%    7.229      1 Template:TechDraw_Tools_navi/fr
+ 12.30%    6.947      1 Template:TitleProperty
+ 11.21%    6.334      1 Template:GuiCommand/fr
+  9.72%    5.489      2 Template:Navigation_menu_2
+  8.46%    4.776      2 Template:Docnav/fr
+  6.58%    3.717      1 Template:Userdocnavi/fr
+  4.25%    2.399      4 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297503-0!canonical and timestamp 20260125132041 and revision id 1743940. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:297503-0!canonical and timestamp 20260125132413 and revision id 1743942. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
