--- a/wiki/fr/TechDraw_ClipGroup.html
+++ b/wiki/fr/TechDraw_ClipGroup.html
@@ -62,7 +62,7 @@
 <ol><li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: activez la feuille souhait&eacute;e en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Fen&ecirc;tre de rognages</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fen&ecirc;tre de rognages</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ClipGroup.svg&amp;filetimestamp=20240708185247&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ClipGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fen&ecirc;tre de rognages</b> du menu.</li></ul></li>
 <li>Si le document comporte plusieurs feuilles de dessin et que vous n'avez pas encore activ&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille d&eacute;sir&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
@@ -129,15 +129,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125132719
+Cached time: 20260125132733
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.090 seconds
-Real time usage: 0.156 seconds
+Real time usage: 0.144 seconds
 Preprocessor visited node count: 580/1000000
-Post&#8208;expand include size: 27734/2097152 bytes
-Template argument size: 9969/2097152 bytes
+Post&#8208;expand include size: 27744/2097152 bytes
+Template argument size: 9979/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -145,19 +145,19 @@ Unstrip post&#8208;expand size: 1432/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   51.120      1 -total
- 22.69%   11.599      1 Template:TechDraw_Tools_navi/fr
- 18.05%    9.227      2 Template:Navigation_menu_2
- 15.24%    7.790      5 Template:PropertyData
-  9.76%    4.990      1 Template:Userdocnavi/fr
-  9.19%    4.696      5 Template:Variable
-  8.07%    4.123      1 Template:TitleProperty
-  7.52%    3.846      2 Template:Docnav/fr
-  7.03%    3.596      2 Template:MenuCommand
-  6.59%    3.371      1 Template:GuiCommand/fr
+100.00%   43.360      1 -total
+ 27.23%   11.808      1 Template:TechDraw_Tools_navi/fr
+ 17.85%    7.741      2 Template:Navigation_menu_2
+ 17.56%    7.613      5 Template:PropertyData
+ 11.01%    4.776      5 Template:Variable
+ 10.74%    4.658      1 Template:Userdocnavi/fr
+ 10.46%    4.534      1 Template:TitleProperty
+  5.66%    2.455      2 Template:Docnav/fr
+  5.66%    2.454      1 Template:GuiCommand/fr
+  4.97%    2.157      5 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180730-0!canonical and timestamp 20260125132719 and revision id 1743944. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180730-0!canonical and timestamp 20260125132732 and revision id 1743946. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
