--- a/wiki/fr/TechDraw_ProjectionGroup.html
+++ b/wiki/fr/TechDraw_ProjectionGroup.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ProjectionGroup/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ProjectionGroup&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ansichtengruppe (83% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Ansichtengruppe (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ProjectionGroup.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ProjectionGroup (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--low" title="TechDraw ProjectionGroup/es (0% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Gruppo di proiezioni (83% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Wstaw grup&#281; rzut&oacute;w (83% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Wstaw grup&#281; rzut&oacute;w (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1042;&#1089;&#1090;&#1072;&#1074;&#1080;&#1090;&#1100; &#1075;&#1088;&#1091;&#1087;&#1087;&#1091; &#1087;&#1088;&#1086;&#1077;&#1082;&#1094;&#1080;&#1081;" (21% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_ProjectionGroup.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#53804;&#49345; &#47784;&#46176; (48% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -14,7 +14,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -25,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Vues de Techdraw &rarr; Ins&eacute;rer un groupe de projections
+<td class="ctEven">TechDraw &rarr; Vues de l'atelier Techdraw &rarr; Groupe de projections
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -54,7 +53,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Groupe de projections</b> cr&eacute;e une <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Multiview_projection">projection multi-vue</a> d'un ou plusieurs objets 3D, en utilisant la projection traditionnelle <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Multiview_orthographic_projection#First-angle_projection">projection premier angle</a> ou <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Multiview_orthographic_projection#Third-angle_projection">projection troisi&egrave;me angle</a>. Les vues isom&eacute;triques des 4 coins de devant peuvent &eacute;galement &ecirc;tre incluses.
 </p><p><span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span>&nbsp;: l'outil <a href="../fr/TechDraw_View.html" title="TechDraw View/fr">TechDraw Vue</a> peut &eacute;galement cr&eacute;er un groupe de projection. Il est conseill&eacute; d'utiliser cet outil &agrave; la place.
@@ -170,7 +168,7 @@
 <hr>
 <ul><li><b>Extensions&nbsp;:</b>
 <ul><li><b>Attributs et modifications&nbsp;:</b> <a href="../fr/TechDraw_ExtensionSelectLineAttributes.html" title="TechDraw ExtensionSelectLineAttributes/fr">Choix des attributs</a>, <a href="../fr/TechDraw_ExtensionChangeLineAttributes.html" title="TechDraw ExtensionChangeLineAttributes/fr">Modification des attributs</a>, <a href="../fr/TechDraw_ExtensionExtendLine.html" title="TechDraw ExtensionExtendLine/fr">Prolonger</a>, <a href="../fr/TechDraw_ExtensionShortenLine.html" title="TechDraw ExtensionShortenLine/fr">Raccourcir</a>, <a href="../fr/TechDraw_ExtensionLockUnlockView.html" title="TechDraw ExtensionLockUnlockView/fr">Verrouiller/d&eacute;verrouiller</a>, <a href="../fr/TechDraw_ExtensionPositionSectionView.html" title="TechDraw ExtensionPositionSectionView/fr">Positionner une vue en coupe</a>, Aligner (<a href="../fr/TechDraw_ExtensionPosHorizChainDimension.html" title="TechDraw ExtensionPosHorizChainDimension/fr">horizontalement</a> -  <a href="../fr/TechDraw_ExtensionPosVertChainDimension.html" title="TechDraw ExtensionPosVertChainDimension/fr">verticalement</a> - <a href="../fr/TechDraw_ExtensionPosObliqueChainDimension.html" title="TechDraw ExtensionPosObliqueChainDimension/fr">obliquemement</a>), Cascade (<a href="../fr/TechDraw_ExtensionCascadeHorizDimension.html" title="TechDraw ExtensionCascadeHorizDimension/fr">horizontale</a> - <a href="../fr/TechDraw_ExtensionCascadeVertDimension.html" title="TechDraw ExtensionCascadeVertDimension/fr">verticale</a> - <a href="../fr/TechDraw_ExtensionCascadeObliqueDimension.html" title="TechDraw ExtensionCascadeObliqueDimension/fr">inclin&eacute;e</a>), <a href="../fr/TechDraw_ExtensionAreaAnnotation.html" title="TechDraw ExtensionAreaAnnotation/fr">Calculer l'aire des faces s&eacute;lectionn&eacute;es</a>, <a href="../fr/TechDraw_ExtensionArcLengthAnnotation.html" title="TechDraw ExtensionArcLengthAnnotation/fr">Longueur d'arc d'ar&ecirc;tes s&eacute;lectionn&eacute;es</a>,  <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser le format d'infobulle</a></li>
-<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersection de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
+<li><b>Lignes centrales, filetage et taraudage&nbsp;:</b> Axes (<a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">de centrage</a> - <a href="../fr/TechDraw_ExtensionHoleCircle.html" title="TechDraw ExtensionHoleCircle/fr">de centrage de trous/vis</a>),  <a href="../fr/TechDraw_ExtensionThreadHoleSide.html" title="TechDraw ExtensionThreadHoleSide/fr">Corps de taraudage</a>,  <a href="../fr/TechDraw_ExtensionThreadHoleBottom.html" title="TechDraw ExtensionThreadHoleBottom/fr">Taraudage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltSide.html" title="TechDraw ExtensionThreadBoltSide/fr">Corps de filetage</a>, <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a>, <a href="../fr/TechDraw_ExtensionVertexAtIntersection.html" title="TechDraw ExtensionVertexAtIntersection/fr">Intersections cosm&eacute;tiques de lignes</a>, <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle.html" title="TechDraw ExtensionDrawCosmCircle/fr">Cercle</a>, <a href="../fr/TechDraw_ExtensionDrawCosmArc.html" title="TechDraw ExtensionDrawCosmArc/fr">Arc</a>, <a href="../fr/TechDraw_ExtensionDrawCosmCircle3Points.html" title="TechDraw ExtensionDrawCosmCircle3Points/fr">Cercle par 3 points</a>, Ligne ( <a href="../fr/TechDraw_ExtensionLineParallel.html" title="TechDraw ExtensionLineParallel/fr">parall&egrave;le</a> - <a href="../fr/TechDraw_ExtensionLinePerpendicular.html" title="TechDraw ExtensionLinePerpendicular/fr">perpendiculaire</a>)</li>
 <li><b>Cotes&nbsp;:</b> <a href="../fr/TechDraw_ExtensionInsertDiameter.html" title="TechDraw ExtensionInsertDiameter/fr">Diam&egrave;tre '&#8960;'</a>, <a href="../fr/TechDraw_ExtensionInsertSquare.html" title="TechDraw ExtensionInsertSquare/fr">Section tube '&#12348;'</a>, <a href="../fr/TechDraw_ExtensionInsertRepetition.html" title="TechDraw ExtensionInsertRepetition/fr">Ins&eacute;rer le pr&eacute;fixe "n&times;"</a>,  <a href="../fr/TechDraw_ExtensionRemovePrefixChar.html" title="TechDraw ExtensionRemovePrefixChar/fr">Supprimer les symboles</a>, D&eacute;cimales (<a href="../fr/TechDraw_ExtensionIncreaseDecimal.html" title="TechDraw ExtensionIncreaseDecimal/fr">en plus</a> - <a href="../fr/TechDraw_ExtensionDecreaseDecimal.html" title="TechDraw ExtensionDecreaseDecimal/fr">en moins</a>)</li></ul></li></ul>
 <hr>
 <ul><li><b>Divers&nbsp;:</b> <a href="../fr/TechDraw_CosmeticEraser.html" title="TechDraw CosmeticEraser/fr">Supprimer l'objet cosm&eacute;tique</a></li></ul>
@@ -193,35 +191,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110171101
+Cached time: 20260125132937
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.113 seconds
-Real time usage: 0.409 seconds
-Preprocessor visited node count: 777/1000000
-Post&#8208;expand include size: 29225/2097152 bytes
-Template argument size: 11244/2097152 bytes
+CPU time usage: 0.112 seconds
+Real time usage: 0.161 seconds
+Preprocessor visited node count: 776/1000000
+Post&#8208;expand include size: 29249/2097152 bytes
+Template argument size: 11254/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6979/5000000 bytes
+Unstrip post&#8208;expand size: 6989/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  120.829      1 -total
- 22.94%   27.722      1 Template:TechDraw_Tools_navi/fr
- 14.12%   17.055      8 Template:PropertyData
- 12.24%   14.791      2 Template:Navigation_menu_2
- 10.74%   12.972      1 Template:Userdocnavi/fr
-  8.84%   10.685      8 Template:Variable
-  7.36%    8.887      3 Template:TitleProperty
-  6.51%    7.860      2 Template:Docnav/fr
-  5.47%    6.613      1 Template:TRUE
-  4.79%    5.792      2 Template:Value
+100.00%   54.153      1 -total
+ 16.89%    9.148      8 Template:PropertyData
+ 14.03%    7.596      1 Template:TechDraw_Tools_navi/fr
+ 10.97%    5.940      8 Template:Variable
+ 10.43%    5.648      2 Template:Navigation_menu_2
+  9.95%    5.391      3 Template:TitleProperty
+  7.34%    3.975      1 Template:Userdocnavi/fr
+  6.21%    3.365      2 Template:Docnav/fr
+  5.97%    3.234      2 Template:Value
+  5.60%    3.032      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260110171100 and revision id 1731366. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125132937 and revision id 1743948. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
