--- a/wiki/fr/TechDraw_ProjectionGroup.html
+++ b/wiki/fr/TechDraw_ProjectionGroup.html
@@ -62,11 +62,8 @@
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir <a href="../fr/TechDraw_View.html#Utilisation_Groupe_de_projection_d'%C3%A9l%C3%A9ment_et_Groupe_de_projection" title="TechDraw View/fr">TechDraw Vue</a>, mais pour lancer l'outil, s&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectionGroup.svg&amp;filetimestamp=20240710132852&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer un groupe de projections</b> du menu.
-</p>
-</div>
-<p><span id="Properties"></span>
+<p>Voir <a href="../fr/TechDraw_View.html#Utilisation_Groupe_de_projection_d'%C3%A9l%C3%A9ment_et_Groupe_de_projection" title="TechDraw View/fr">TechDraw Vue</a>, mais pour lancer l'outil, s&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_ProjectionGroup.svg&amp;filetimestamp=20240710132852&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ProjectionGroup.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Groupe de projections</b> du menu.
+</p><p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
 <div class="mw-translate-fuzzy">
@@ -191,15 +188,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125132937
+Cached time: 20260125133035
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.112 seconds
-Real time usage: 0.161 seconds
-Preprocessor visited node count: 776/1000000
-Post&#8208;expand include size: 29249/2097152 bytes
-Template argument size: 11254/2097152 bytes
+Real time usage: 0.197 seconds
+Preprocessor visited node count: 775/1000000
+Post&#8208;expand include size: 29247/2097152 bytes
+Template argument size: 11252/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -207,19 +204,19 @@ Unstrip post&#8208;expand size: 6989/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   54.153      1 -total
- 16.89%    9.148      8 Template:PropertyData
- 14.03%    7.596      1 Template:TechDraw_Tools_navi/fr
- 10.97%    5.940      8 Template:Variable
- 10.43%    5.648      2 Template:Navigation_menu_2
-  9.95%    5.391      3 Template:TitleProperty
-  7.34%    3.975      1 Template:Userdocnavi/fr
-  6.21%    3.365      2 Template:Docnav/fr
-  5.97%    3.234      2 Template:Value
-  5.60%    3.032      1 Template:GuiCommand/fr
+100.00%   59.659      1 -total
+ 17.64%   10.524      8 Template:PropertyData
+ 14.48%    8.636      1 Template:TechDraw_Tools_navi/fr
+ 13.16%    7.851      2 Template:Navigation_menu_2
+ 12.17%    7.260      8 Template:Variable
+  9.69%    5.783      3 Template:TitleProperty
+  9.05%    5.398      1 Template:GuiCommand/fr
+  8.74%    5.215      1 Template:Version/fr
+  8.01%    4.779      1 Template:Userdocnavi/fr
+  5.03%    2.998      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125132937 and revision id 1743948. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125133035 and revision id 1743950. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
