Updated page TechDraw ProjectionGroup/fr

--- a/wiki/fr/TechDraw_ProjectionGroup.html
+++ b/wiki/fr/TechDraw_ProjectionGroup.html
@@ -66,11 +66,8 @@
 </p><p><span id="Properties"></span>
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s">Propri&eacute;t&eacute;s</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Voir aussi&nbsp;: <a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p>
-</div>
-<p>Un groupe de projections, en fait un objet <code>TechDraw::DrawProjGroup</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+<p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
+</p><p>Un groupe de projections, en fait un objet <code>TechDraw::DrawProjGroup</code>, poss&egrave;de les <a href="../fr/TechDraw_View.html#Propri%C3%A9t%C3%A9s_Vue_de_Part" title="TechDraw View/fr">propri&eacute;t&eacute;s</a> communes &agrave; tous les types de vues. Elle poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -188,13 +185,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133035
+Cached time: 20260125133040
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.112 seconds
-Real time usage: 0.197 seconds
-Preprocessor visited node count: 775/1000000
+CPU time usage: 0.115 seconds
+Real time usage: 0.250 seconds
+Preprocessor visited node count: 774/1000000
 Post&#8208;expand include size: 29247/2097152 bytes
 Template argument size: 11252/2097152 bytes
 Highest expansion depth: 7/100
@@ -204,19 +201,19 @@ Unstrip post&#8208;expand size: 6989/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   59.659      1 -total
- 17.64%   10.524      8 Template:PropertyData
- 14.48%    8.636      1 Template:TechDraw_Tools_navi/fr
- 13.16%    7.851      2 Template:Navigation_menu_2
- 12.17%    7.260      8 Template:Variable
-  9.69%    5.783      3 Template:TitleProperty
-  9.05%    5.398      1 Template:GuiCommand/fr
-  8.74%    5.215      1 Template:Version/fr
-  8.01%    4.779      1 Template:Userdocnavi/fr
-  5.03%    2.998      1 Template:Caption
+100.00%   99.946      1 -total
+ 14.14%   14.133      1 Template:TechDraw_Tools_navi/fr
+ 13.88%   13.870      8 Template:PropertyData
+ 11.87%   11.859      3 Template:TitleProperty
+ 11.55%   11.547      1 Template:Userdocnavi/fr
+ 10.35%   10.342      2 Template:Navigation_menu_2
+  8.93%    8.920      8 Template:Variable
+  5.59%    5.582      2 Template:Docnav/fr
+  5.41%    5.405      1 Template:Caption
+  5.12%    5.113      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125133035 and revision id 1743950. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125133040 and revision id 1743952. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
