--- a/wiki/fr/TechDraw_ProjectionGroup.html
+++ b/wiki/fr/TechDraw_ProjectionGroup.html
@@ -89,12 +89,8 @@
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
 <p>Le groupe de projections dans son ensemble h&eacute;rite de X, Y, ScaleType, Scale et Rotation &agrave; partir de la vue de base.
-</p>
-<div class="mw-translate-fuzzy">
-<p>Chaque vue au sein du groupe h&eacute;rite de toutes les propri&eacute;t&eacute;s de la vue de la pi&egrave;ce, mais l'objet ProjectionGroup contr&ocirc;le l'&eacute;chelle de toutes ses vues membres.
-</p>
-</div>
-<p>La propri&eacute;t&eacute; RotationVector des diff&eacute;rentes vues du groupe est obsol&egrave;te &agrave; partir de v0.19. Utilisez XDirection &agrave; la place.
+</p><p>Chaque vue au sein du groupe h&eacute;rite de toutes les propri&eacute;t&eacute;s de la vue de la pi&egrave;ce, mais l'objet ProjectionGroup contr&ocirc;le l'&eacute;chelle de toutes ses vues membres.
+</p><p>La propri&eacute;t&eacute; RotationVector des diff&eacute;rentes vues du groupe est obsol&egrave;te &agrave; partir de v0.19. Utilisez XDirection &agrave; la place.
 </p><p>Notez que la bo&icirc;te centrale affiche la direction de projection en cours de la vue principale. Elle ne peut pas &ecirc;tre utilis&eacute;e pour changer de direction.
 </p><p><span id="Scripting"></span>
 </p>
@@ -185,13 +181,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133040
+Cached time: 20260125133104
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.250 seconds
-Preprocessor visited node count: 774/1000000
+CPU time usage: 0.107 seconds
+Real time usage: 0.169 seconds
+Preprocessor visited node count: 773/1000000
 Post&#8208;expand include size: 29247/2097152 bytes
 Template argument size: 11252/2097152 bytes
 Highest expansion depth: 7/100
@@ -201,19 +197,19 @@ Unstrip post&#8208;expand size: 6989/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   99.946      1 -total
- 14.14%   14.133      1 Template:TechDraw_Tools_navi/fr
- 13.88%   13.870      8 Template:PropertyData
- 11.87%   11.859      3 Template:TitleProperty
- 11.55%   11.547      1 Template:Userdocnavi/fr
- 10.35%   10.342      2 Template:Navigation_menu_2
-  8.93%    8.920      8 Template:Variable
-  5.59%    5.582      2 Template:Docnav/fr
-  5.41%    5.405      1 Template:Caption
-  5.12%    5.113      1 Template:Code
+100.00%   57.021      1 -total
+ 16.52%    9.420      8 Template:PropertyData
+ 13.50%    7.696      1 Template:TechDraw_Tools_navi/fr
+ 10.14%    5.780      8 Template:Variable
+ 10.11%    5.766      1 Template:Userdocnavi/fr
+  9.86%    5.621      2 Template:Navigation_menu_2
+  7.69%    4.384      3 Template:TitleProperty
+  7.43%    4.236      1 Template:GuiCommand/fr
+  6.33%    3.610      1 Template:Caption
+  5.75%    3.278     12 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125133040 and revision id 1743952. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180601-0!canonical and timestamp 20260125133104 and revision id 1743954. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
