Updated page TechDraw SectionView/fr

--- a/wiki/fr/TechDraw_SectionView.html
+++ b/wiki/fr/TechDraw_SectionView.html
@@ -24,7 +24,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Vues de Techdraw &rarr; Vue en coupe
+<td class="ctEven">TechDraw &rarr; Vues de l'atelier Techdraw &rarr; Vue en coupe
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -212,15 +212,15 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260119210539
+Cached time: 20260125133217
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.130 seconds
-Real time usage: 0.551 seconds
+CPU time usage: 0.151 seconds
+Real time usage: 0.360 seconds
 Preprocessor visited node count: 1736/1000000
-Post&#8208;expand include size: 40211/2097152 bytes
-Template argument size: 12535/2097152 bytes
+Post&#8208;expand include size: 40231/2097152 bytes
+Template argument size: 12555/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -228,19 +228,19 @@ Unstrip post&#8208;expand size: 4678/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  215.274      1 -total
- 19.14%   41.214      1 Template:Userdocnavi/fr
- 16.11%   34.685      2 Template:Navigation_menu_2
- 15.07%   32.442      1 Template:TechDraw_Tools_navi/fr
- 11.63%   25.028     20 Template:PropertyData
-  9.12%   19.639     26 Template:Variable
-  9.10%   19.593     15 Template:Value
-  8.98%   19.341      6 Template:TitleProperty
-  7.37%   15.870      1 Template:Code
-  7.32%   15.749      5 Template:Version/fr
+100.00%   94.633      1 -total
+ 16.92%   16.010     20 Template:PropertyData
+ 12.76%   12.074      1 Template:Userdocnavi/fr
+ 11.78%   11.152     26 Template:Variable
+ 11.52%   10.897      2 Template:Navigation_menu_2
+ 11.39%   10.783      6 Template:PropertyView
+  8.82%    8.348      1 Template:TechDraw_Tools_navi/fr
+  7.91%    7.488      5 Template:Version/fr
+  6.95%    6.581      2 Template:Docnav/fr
+  6.20%    5.871      1 Template:GuiCommand/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260119210538 and revision id 1741246. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260125133217 and revision id 1743958. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
