--- a/wiki/fr/TechDraw_SectionView.html
+++ b/wiki/fr/TechDraw_SectionView.html
@@ -67,7 +67,7 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
 <ol><li>S&eacute;lectionnez une vue de la pi&egrave;ce dans la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a> ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il existe plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
 <ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Vue en coupe</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue en coupe</b> du menu.</li></ul></li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_SectionView.svg&amp;filetimestamp=20241124213855&amp;.html" class="mw-file-description"><img src="../File/TechDraw_SectionView.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Vue en coupe</b> du menu.</li></ul></li>
 <li>Un panneau de t&acirc;ches s'ouvre et vous aide &agrave; calculer les diff&eacute;rentes propri&eacute;t&eacute;s. Des valeurs raisonnables pour la direction de la vue sont calcul&eacute;es, mais elles peuvent &ecirc;tre modifi&eacute;es.</li></ol>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_Section_Taskview.png&amp;filetimestamp=20200316113722&amp;.html" class="mw-file-description"><img src="../File/TechDraw_Section_Taskview.png" decoding="async" width="380" height="420" class="mw-file-element" data-file-width="380" data-file-height="420"></a></span>
 </p>
@@ -212,15 +212,15 @@ L'image du bas montre le format de fl&egrave;che ISO.</p>
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125133217
+Cached time: 20260125133228
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.151 seconds
-Real time usage: 0.360 seconds
+CPU time usage: 0.130 seconds
+Real time usage: 0.208 seconds
 Preprocessor visited node count: 1736/1000000
-Post&#8208;expand include size: 40231/2097152 bytes
-Template argument size: 12555/2097152 bytes
+Post&#8208;expand include size: 40241/2097152 bytes
+Template argument size: 12565/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -228,19 +228,19 @@ Unstrip post&#8208;expand size: 4678/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   94.633      1 -total
- 16.92%   16.010     20 Template:PropertyData
- 12.76%   12.074      1 Template:Userdocnavi/fr
- 11.78%   11.152     26 Template:Variable
- 11.52%   10.897      2 Template:Navigation_menu_2
- 11.39%   10.783      6 Template:PropertyView
-  8.82%    8.348      1 Template:TechDraw_Tools_navi/fr
-  7.91%    7.488      5 Template:Version/fr
-  6.95%    6.581      2 Template:Docnav/fr
-  6.20%    5.871      1 Template:GuiCommand/fr
+100.00%   60.766      1 -total
+ 17.91%   10.885      1 Template:TechDraw_Tools_navi/fr
+ 15.18%    9.225     20 Template:PropertyData
+ 14.47%    8.795      2 Template:Navigation_menu_2
+ 13.58%    8.255     26 Template:Variable
+  8.53%    5.184      1 Template:Code
+  7.74%    4.702      6 Template:TitleProperty
+  7.39%    4.492      6 Template:PropertyView
+  6.56%    3.987      1 Template:GuiCommand/fr
+  6.37%    3.873      1 Template:Userdocnavi/fr
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260125133217 and revision id 1743958. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:180626-0!canonical and timestamp 20260125133228 and revision id 1743960. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
