Updated page TechDraw View/fr

--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -64,14 +64,13 @@
 <p><span id="Usage_Projection_Group_Item_and_Projection_Group"></span>
 </p>
 <h2><span id="Utilisation_Groupe_de_projection_d.27.C3.A9l.C3.A9ment_et_Groupe_de_projection"></span><span class="mw-headline" id="Utilisation_Groupe_de_projection_d'&eacute;l&eacute;ment_et_Groupe_de_projection">Utilisation Groupe de projection d'&eacute;l&eacute;ment et Groupe de projection</span></h2>
-<div class="mw-translate-fuzzy">
-<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_view.html" class="mw-redirect" title="3D view/fr">vue 3D</a>. La direction de la cam&eacute;ra dans la vue 3D peut &ecirc;tre utilis&eacute;e pour d&eacute;finir la direction de projection de la vue principale.</li>
-<li>S&eacute;lectionnez un ou plusieurs objets avec une propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Shape</b> dans la vue 3D ou la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>. Vous pouvez &eacute;galement s&eacute;lectionner des <a href="../fr/Std_Part.html" title="Std Part/fr">Std Parts</a> ou des <a href="../fr/Std_Group.html" title="Std Group/fr">Std Groupes</a> qui contiennent de tels objets. Lors de la s&eacute;lection dans la vue 3D, la premi&egrave;re face s&eacute;lectionn&eacute;e peut &ecirc;tre utilis&eacute;e pour d&eacute;finir la direction de projection de la vue primaire. Ne s&eacute;lectionnez pas d'objets en choisissant une face dans la vue 3D si vous souhaitez utiliser la direction en cours de la cam&eacute;ra.</li>
-<li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: vous pouvez ajouter la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans la <a href="../fr/Tree_view.html" class="mw-redirect" title="Tree view/fr">vue en arborescence</a>.</li>
+<ol><li>Vous pouvez faire pivoter la <a href="../fr/3D_View.html" title="3D View/fr">vue 3D</a>. La direction de la cam&eacute;ra dans la vue 3D peut &ecirc;tre utilis&eacute;e pour d&eacute;finir la direction de projection de la vue principale.</li>
+<li>S&eacute;lectionnez un ou plusieurs objets avec une propri&eacute;t&eacute; <span style="font-size:60%; padding-right:0.8em;">Donn&eacute;es</span><b>Shape</b> dans la vue 3D ou l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>. Vous pouvez &eacute;galement s&eacute;lectionner des <a href="../fr/Std_Part.html" title="Std Part/fr">Std Parts</a> ou des <a href="../fr/Std_Group.html" title="Std Group/fr">Std Groupes</a> qui contiennent de tels objets. Lors de la s&eacute;lection dans la vue 3D, la premi&egrave;re face s&eacute;lectionn&eacute;e peut &ecirc;tre utilis&eacute;e pour d&eacute;finir la direction de projection de la vue primaire. Ne s&eacute;lectionnez pas d'objets en choisissant une face dans la vue 3D si vous souhaitez utiliser la direction en cours de la cam&eacute;ra.</li>
+<li>S'il y a plusieurs feuilles de dessin dans le document&nbsp;: vous pouvez ajouter la feuille souhait&eacute;e &agrave; la s&eacute;lection en la s&eacute;lectionnant dans l'<a href="../fr/Tree_View.html" title="Tree View/fr">arborescence</a>.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Ins&eacute;rer une vue</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Ins&eacute;rer une vue</b> du menu.</li></ul></li>
-<li>S'il y a plusieurs feuilles de dessin dans le document, et si aucune feuille n'est affich&eacute;e dans la <a href="../fr/Main_view_area.html" class="mw-redirect" title="Main view area/fr">zone de vue principale</a> et que vous n'avez pas encore s&eacute;lectionn&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
+<ul><li>Appuyez sur le <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Nouvelle vue</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; Vues de l'atelier Techdraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_View.svg&amp;filetimestamp=20240710144809&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Nouvelle vue</b> du menu.</li></ul></li>
+<li>S'il y a plusieurs feuilles de dessin dans le document, et si aucune feuille n'est affich&eacute;e dans la <a href="../fr/Main_View_Area.html" title="Main View Area/fr">zone de vue principale</a> et que vous n'avez pas encore s&eacute;lectionn&eacute; de feuille, la fen&ecirc;tre de dialogue <b>S&eacute;lecteur de feuilles</b> s'ouvre&nbsp;:
 <ol><li>S&eacute;lectionnez la feuille souhait&eacute;e.</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li></ol></li>
 <li>Le panneau de t&acirc;ches <b>Vue de l'objet</b> s'ouvre. <span style="font-size:small;"><a href="../fr/Release_notes_1.0.html" title="Release notes 1.0/fr">introduit dans la version 1.0</a></span></li>
@@ -87,7 +86,6 @@
 <li>Apr&egrave;s avoir modifi&eacute; certains param&egrave;tres, il peut &ecirc;tre n&eacute;cessaire d'appuyer sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Appliquer</span> pour mettre &agrave; jour la (les) vue(s).</li>
 <li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span>.</li>
 <li>Un <a href="#Propri%C3%A9t%C3%A9s_Groupe_de_projection_d'un_%C3%A9l%C3%A9ment">groupe de projection d'un &eacute;l&eacute;ment</a> ou, s'il y a une ou plusieurs projections secondaires, un <a href="../fr/TechDraw_ProjectionGroup.html" title="TechDraw ProjectionGroup/fr">groupe de projection</a> est ins&eacute;r&eacute;.</li></ol>
-</div>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=TechDraw_View_Taskpanel.png&amp;filetimestamp=20240925142411&amp;.html" class="mw-file-description"><img src="../File/TechDraw_View_Taskpanel.png" decoding="async" width="282" height="496" class="mw-file-element" data-file-width="282" data-file-height="496"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -313,15 +311,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134301
+Cached time: 20260125134551
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.177 seconds
-Real time usage: 0.262 seconds
-Preprocessor visited node count: 3274/1000000
-Post&#8208;expand include size: 59682/2097152 bytes
-Template argument size: 15337/2097152 bytes
+CPU time usage: 0.187 seconds
+Real time usage: 0.358 seconds
+Preprocessor visited node count: 3273/1000000
+Post&#8208;expand include size: 59684/2097152 bytes
+Template argument size: 15339/2097152 bytes
 Highest expansion depth: 7/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
@@ -329,19 +327,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  106.332      1 -total
- 19.70%   20.946     58 Template:Variable
- 18.07%   19.211     35 Template:PropertyData
- 12.22%   12.994      1 Template:Code
- 10.27%   10.924     23 Template:PropertyView
- 10.20%   10.848      1 Template:TechDraw_Tools_navi/fr
-  9.38%    9.976     11 Template:Value
-  6.62%    7.042     65 Template:Incode
-  6.21%    6.598      2 Template:Navigation_menu_2
-  4.50%    4.781     12 Template:TitleProperty
+100.00%  135.238      1 -total
+ 19.27%   26.055     35 Template:PropertyData
+ 18.98%   25.667     58 Template:Variable
+ 12.27%   16.588     23 Template:PropertyView
+  8.26%   11.176     11 Template:Value
+  6.97%    9.426     12 Template:TitleProperty
+  6.46%    8.736     65 Template:Incode
+  5.43%    7.339      1 Template:GuiCommand/fr
+  5.15%    6.958      1 Template:TechDraw_Tools_navi/fr
+  4.90%    6.625      4 Template:TRUE
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134300 and revision id 1743976. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134550 and revision id 1743978. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
