Updated page TechDraw View/fr

--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -109,7 +109,7 @@
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s_Vue_d.27une_pi.C3.A8ce"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Vue_d'une_pi&egrave;ce">Propri&eacute;t&eacute;s Vue d'une pi&egrave;ce</span></h2>
 <p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p><p>Une vue de Part, en fait un objet <code>TechDraw::DrawViewPart</code>, a les propri&eacute;t&eacute;s suivantes&nbsp;:
+</p><p>Une vue d'une pi&egrave;ce, en fait un objet <code>TechDraw::DrawViewPart</code>, a les propri&eacute;t&eacute;s suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es"></span><span class="mw-headline" id="Donn&eacute;es">Donn&eacute;es</span></h3>
@@ -307,12 +307,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134710
+Cached time: 20260125134728
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.165 seconds
-Real time usage: 0.210 seconds
+CPU time usage: 0.181 seconds
+Real time usage: 0.305 seconds
 Preprocessor visited node count: 3271/1000000
 Post&#8208;expand include size: 59680/2097152 bytes
 Template argument size: 15337/2097152 bytes
@@ -323,19 +323,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   72.393      1 -total
- 24.21%   17.523     58 Template:Variable
- 20.00%   14.480     35 Template:PropertyData
- 13.23%    9.577     23 Template:PropertyView
-  9.50%    6.880      1 Template:TechDraw_Tools_navi/fr
-  7.11%    5.148      2 Template:Navigation_menu_2
-  5.81%    4.209     12 Template:TitleProperty
-  5.76%    4.167     11 Template:Value
-  5.63%    4.074      1 Template:Userdocnavi/fr
-  5.19%    3.761     65 Template:Incode
+100.00%  142.767      1 -total
+ 25.69%   36.674     58 Template:Variable
+ 22.24%   31.747     35 Template:PropertyData
+ 14.51%   20.715     23 Template:PropertyView
+ 10.50%   14.990      1 Template:TechDraw_Tools_navi/fr
+ 10.47%   14.945      1 Template:GuiCommand/fr
+  5.00%    7.143     12 Template:TitleProperty
+  4.77%    6.809      2 Template:Navigation_menu_2
+  4.68%    6.681     11 Template:Value
+  4.24%    6.055     65 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134709 and revision id 1743982. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134728 and revision id 1743984. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
