Updated page TechDraw View/fr

--- a/wiki/fr/TechDraw_View.html
+++ b/wiki/fr/TechDraw_View.html
@@ -196,7 +196,7 @@
 </p>
 <h2><span id="Propri.C3.A9t.C3.A9s_Groupe_de_projection_d.27un_.C3.A9l.C3.A9ment"></span><span class="mw-headline" id="Propri&eacute;t&eacute;s_Groupe_de_projection_d'un_&eacute;l&eacute;ment">Propri&eacute;t&eacute;s Groupe de projection d'un &eacute;l&eacute;ment</span></h2>
 <p>Voir aussi&nbsp;: <a href="../fr/Property_View.html" title="Property View/fr">&Eacute;diteur de propri&eacute;t&eacute;s</a>
-</p><p>Une groupe de projection d'un &eacute;l&eacute;ment, en fait un objet <code>TechDraw::DrawProjGroupItem</code>, est d&eacute;riv&eacute;e d'une <a class="mw-selflink-fragment" href="#Propri%C3%A9t%C3%A9s_Vue_de_Part">vue de Part</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
+</p><p>Une groupe de projection d'un &eacute;l&eacute;ment, en fait un objet <code>TechDraw::DrawProjGroupItem</code>, est d&eacute;riv&eacute;e d'une <a href="#Propri%C3%A9t%C3%A9s_Vue_d'une_pi%C3%A8ce">vue d'une pi&egrave;ce</a> et h&eacute;rite de toutes ses propri&eacute;t&eacute;s. Il poss&egrave;de &eacute;galement les propri&eacute;t&eacute;s suppl&eacute;mentaires suivantes&nbsp;:
 </p><p><span id="Data"></span>
 </p>
 <h3><span id="Donn.C3.A9es_2"></span><span class="mw-headline" id="Donn&eacute;es_2">Donn&eacute;es</span></h3>
@@ -304,12 +304,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260125134746
+Cached time: 20260125134848
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.169 seconds
-Real time usage: 0.324 seconds
+CPU time usage: 0.183 seconds
+Real time usage: 0.270 seconds
 Preprocessor visited node count: 3270/1000000
 Post&#8208;expand include size: 59680/2097152 bytes
 Template argument size: 15337/2097152 bytes
@@ -320,19 +320,19 @@ Unstrip post&#8208;expand size: 5519/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  110.928      1 -total
- 24.43%   27.100     58 Template:Variable
- 23.54%   26.110     35 Template:PropertyData
- 11.18%   12.403      1 Template:TechDraw_Tools_navi/fr
-  9.43%   10.463     23 Template:PropertyView
-  8.65%    9.598      2 Template:Navigation_menu_2
-  7.28%    8.070     12 Template:TitleProperty
-  5.49%    6.085      1 Template:Userdocnavi/fr
-  5.44%    6.030     11 Template:Value
-  4.28%    4.752     65 Template:Incode
+100.00%   97.223      1 -total
+ 32.30%   31.400     58 Template:Variable
+ 30.62%   29.770     35 Template:PropertyData
+ 11.82%   11.491     23 Template:PropertyView
+  5.96%    5.796      1 Template:GuiCommand/fr
+  5.86%    5.693      1 Template:TechDraw_Tools_navi/fr
+  5.33%    5.185     65 Template:Incode
+  5.10%    4.957     12 Template:TitleProperty
+  4.86%    4.721     11 Template:Value
+  4.46%    4.337      2 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134746 and revision id 1743986. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:87060-0!canonical and timestamp 20260125134848 and revision id 1743988. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
